css/index.css
body {
  width: 100%;
}

header {
  background-color: #0a4773;;
  min-height: 500px;
}

main {
  background-color: #F6F6F6;
  padding-top: 8em;
}

section {
  text-align: center;
  padding-bottom: 5em;
}

a, a:hover {
  color: black;
  text-decoration: none;
}

i {
  font-size: 2em;
}

iframe {
  border: none;
}

#modal {
  position: relative;
  margin: auto;
  top: 5em;
  background: white;
  min-height: 500px;
  width: 70%;
  border-radius: 5px;
  box-shadow: 1px 1px 4px lightgray;
}

#modal div {
  display: inline-block;
}

#headshot {
  margin: 3.5em 0 0 3.5em;
}

#headshot img {
  border-radius: 10%;
}

#about-me {
  margin: 13em 0 0 8em;
  vertical-align: top;
}

#about-me h1 {
  margin-bottom: 0.5rem;
}

#about-me .subheading {
  text-align: center;
  margin-left: 1.25rem;
}

#about-me ul {
  list-style: none;
}

#about-me li {
  display: inline-block;
  color: black;
  margin-left: 1.25rem;
}

#recommendations h3 {
  margin-bottom: 0.1em;
}

#recommendations .card {
  height: 300px;
}

#recommendation-toggle {
  list-style: none;
  font-size: 0.5em;
}

#recommendation-toggle li {
  display: inline-block;
  margin: 0 0.2em;
}

#talks .card iframe {
  margin-bottom: 2em;
}

#projects .card h3, #projects .card img{
  margin-bottom: 1em;
}

.card {
  background: white;
  padding: 2em;
  margin: 2em 0;
  border-radius: 5px;
  box-shadow: 1px 1px 2px lightgray;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow: scroll;
}

.card:hover {
  box-shadow: 2px 2px 2px lightgray;
}

.card.hidden {
  display: none;
}

.card p, .card blockquote {
  padding: 0 15%;
}

.card blockquote {
  max-height: 85%;
}

.card i {
  font-size: 1em;
}

@media (max-width: 1500px) {
  #recommendations .card {
    height: 375px;
  }
}

@media (max-width: 1250px) {
  #modal {
    width: 90%;
  }

  #recommendations .card {
    height: 450px;
  }
}

@media (max-width: 1050px) {
  iframe {
    width: 428.8px;
    height: 241.2px;
  }

  #smile-o-meter img {
    width: 300px;
    height: 203.5px;
  }

  #recommendations .card {
    height: 525px;
  }
}

@media (max-width: 950px) {
  #headshot {
    margin-left: 1rem;
  }

  #about-me {
    margin-left: 5rem;
  }

  #about-me li {
    margin-left: 1rem;
  }

  #about-me i {
    font-size: 1.7em;
  }
}

@media (max-width: 850px) {
  #modal div {
    display: block;
  }

  #headshot {
    text-align: center;
    margin: 0;
    padding-top: 2em;
  }

  #about-me {
    text-align: center;
    margin: 0;
    padding: 3em;
  }

  .card p, .card blockquote {
    padding: 0;
  }
}

@media (max-width: 500px) {
  #headshot img {
    height: 250px;
    width: 250px;
  }

  iframe {
    width: 214.4px;
    height: 120px;
  }

  .card {
    margin: 2em 1em;
  }
}

